--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
     "passport": "^0.5.3",
     "passport-local": "^1.0.0",
