--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dev": "NODE_ENV=development nodemon index.js",
     "lint": "eslint .",
     "test": "NODE_ENV=test jest --verbose --runInBand --forceExit",
-    "start:test": "NODE_ENV=test node index.js"
+    "start:test": "NODE_ENV=test node index.js",
+    "build:ui": "rm -rf build && cd ../natursatt_frontend && npm run build && cp -r build ../natursatt_backend && cd ../natursatt_backend",
+    "deploy": "npm run build:ui && git add . && git commit -m uibuild && git push heroku main && rm -rf build"
+
   },
   "author": "Tilman Drewke",
   "license": "ISC",
