--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "NODE_ENV=test jest --verbose --runInBand --forceExit",
     "start:test": "NODE_ENV=test node index.js",
     "build:ui": "rm -rf build && cd ../natursatt_frontend && npm run build && cp -r build ../natursatt_backend && cd ../natursatt_backend",
-    "deploy": "npm run build:ui && git add . && git commit -m uibuild && git push heroku main && rm -rf build"
+    "deploy": "npm run build:ui && git add . && git commit -m uibuild && git push heroku main && rm -rf build && heroku logs --tail"
 
   },
   "author": "Tilman Drewke",
