--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint .",
     "test": "NODE_ENV=test jest --verbose --runInBand --forceExit",
     "start:test": "NODE_ENV=test node index.js",
-    "deploy": "cd ../natursatt_frontend && npm run build && cp -r build ../natursatt_backend && rm -rf build && cd ../natursatt_backend && cp ../.natursattEnv/.env ./ && npm start"
+    "deploy": "cd ../natursatt_frontend && npm run build && cp -r build ../natursatt_backend && rm -rf build && cd ../natursatt_backend && cp ../.natursattEnv/.env ./ && npm start",
+    "deployLocal": "cd ../natursatt_frontend && npm run build && cp -r build ../natursatt_backend && rm -rf build && cd ../natursatt_backend && npm start"
+
   },
   "author": "Tilman Drewke",
   "license": "ISC",
