--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "NODE_ENV=test jest --verbose --runInBand --forceExit",
     "start:test": "NODE_ENV=test node index.js",
     "deploy": "cd ../natursatt_frontend && npm run build && cp -r build ../natursatt_backend && rm -rf build && cd ../natursatt_backend && cp ../.natursattEnv/.env ./ && npm start",
-    "deployLocal": "cd ../natursatt_frontend && npm run build && cp -r build ../natursatt_backend && rm -rf build && cd ../natursatt_backend && npm start"
+    "deployLocal": "cd ../natursatt_frontend && rm -rf build && npm run build && cp -r build ../natursatt_backend && cd ../natursatt_backend && npm run start"
 
   },
   "author": "Tilman Drewke",
